fix(api): use a real object as return for the export
